--- a/Computer Vision.ipynb
+++ b/Computer Vision.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,6 +60,146 @@
     "img = cv2.imread(path_to_image)\n",
     "\n",
     "cv2.imwrite('c:/Users/siddhant.dash/Downloads/klaus.jpg',img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Atomic Info of an image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(200, 200)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 84  84  84 ...  66  64  64]\n",
+      " [ 84  84  83 ...  64  61  61]\n",
+      " [ 84  84  83 ...  66  62  61]\n",
+      " ...\n",
+      " [ 34  35  35 ... 217 220 222]\n",
+      " [ 36  37  36 ... 216 217 219]\n",
+      " [ 36  37  37 ... 204 206 208]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "cv2.imshow('Cropped',img[0:120,60:150])\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drawing/writing on image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img1 = cv2.putText(img.copy(),'Klaus',(30,150),cv2.FONT_HERSHEY_SIMPLEX,1,(200,100,0),2,cv2.LINE_AA)\n",
+    "cv2.imshow('1',img1)\n",
+    "img2 = cv2.rectangle(img.copy(),(60,0),(150,120),(0,0,255),2)\n",
+    "cv2.imshow('2',img2)\n",
+    "img3 = cv2.circle(img.copy(),(80,80),30,(0,255,255),2)\n",
+    "cv2.imshow('3',img3)\n",
+    "img4 = cv2.line(img.copy(),(60,0),(150,120),(0,0,0),2)\n",
+    "cv2.imshow('4',img4)\n",
+    "\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thresholding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
+    "cv2.imshow('gray',gray)\n",
+    "\n",
+    "val1,th1 = cv2.threshold(gray,125,255,cv2.THRESH_BINARY)\n",
+    "cv2.imshow('t1',th1)\n",
+    "\n",
+    "val2,th2 = cv2.threshold(gray,125,255,cv2.THRESH_BINARY+cv2.THRESH_OTSU)\n",
+    "cv2.imshow('t2',th2)\n",
+    "\n",
+    "th3 = cv2.adaptiveThreshold(gray,255,cv2.ADAPTIVE_THRESH_GAUSSIAN_C,cv2.THRESH_BINARY,155,1)\n",
+    "cv2.imshow('t3',th3)\n",
+    "\n",
+    "\n",
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows()"
    ]
   },
   {
